[package]
name = "twitlistauth"
version = "0.1.0"
authors = ["Cole Mickens <cole.mickens@gmail.com>"]

[dependencies]
env_logger = "0.3.1"
hyper = "0.6.13"
serde = "0.6.0"
serde_json = "0.6.0"
iron = "0.2.2"
staticfile = "0.0.6"
cookie = "0.2.0"
mount = "0.0.9"

#[dependencies.staticfile]
#path = ""
